--- a/backend/web/.htaccess
+++ b/backend/web/.htaccess
@@ -1,3 +1,4 @@
+ Options -Indexes +FollowSymLinks
 # use mod_rewrite for pretty URL support
 RewriteEngine on
 # If a directory or a file exists, use the request directly
