--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,16 @@
         "irc": "irc://irc.freenode.net/yii",
         "source": "https://github.com/yiisoft/yii2"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.6",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-jui": "^2.0",
-        "2amigos/yii2-ckeditor-widget": "^2.0"
+        "2amigos/yii2-ckeditor-widget": "^2.0",
+        "iutbay/yii2-kcfinder": "dev-master"
         
         
     },
